--- a/src/assets/styles/modules/header.scss
+++ b/src/assets/styles/modules/header.scss
@@ -13,7 +13,7 @@
   &--up {
     @media (min-width: $breakpoint) {
       transform: translateY(-80px);
-  
+
       #{$comp}__logo {
         transform: scale(0.55) translateY(80px) translateZ(0);
       }
@@ -43,7 +43,7 @@
       &:nth-child(2) {
         opacity: 0;
       }
-      
+
       &:nth-child(3) {
         bottom: 50%;
         transform: translateY(50%) rotate(45deg);
@@ -59,14 +59,16 @@
       }
     }
   }
-  
+
   &__inner {
     padding: 20px 20px 0;
+
     @media (max-width: ($breakpoint - 1px)) {
       padding: 8px 16px;
     }
 
     display: flex;
+
     @media (max-width: ($breakpoint - 1px)) {
       justify-content: space-between;
       align-items: center;
@@ -78,12 +80,15 @@
 
   &__logo {
     margin-right: 60px;
+
     @media (max-width: ($breakpoint-ll - 1px)) {
       margin-right: 30px;
     }
+
     @media (max-width: ($breakpoint - 1px)) {
       margin-right: 0;
     }
+
     display: flex;
     justify-content: center;
 
@@ -101,6 +106,7 @@
 
   &__body {
     width: 100%;
+
     @media (max-width: ($breakpoint - 1px)) {
       display: none;
     }
@@ -153,13 +159,16 @@
 
     &:nth-child(1) {
       width: calc(#{$col-part-d} * 6);
+
       @media (max-width: ($breakpoint-xl - 1px)) {
         width: calc(#{$col-part-d} * 7);
       }
     }
+
     &:nth-child(2) {
       margin: -1px 0;
     }
+
     &:nth-child(3) {
       flex-grow: 1;
       justify-content: flex-end;
@@ -168,9 +177,11 @@
 
   &__accordion {
     margin-right: 32px;
+
     @media (max-width: ($breakpoint-ll - 1px)) {
       margin-right: 20px;
     }
+
     @media (max-width: ($breakpoint-l - 1px)) {
       margin-right: 15px;
     }
@@ -179,14 +190,17 @@
       #{$comp}__accordion-text {
         color: $color-blue;
       }
+
       #{$comp}__accordion-svg {
         transform: rotate(180deg);
+
         path {
           stroke: $color-blue;
         }
       }
     }
   }
+
   &__accordion-button {
     display: flex;
     align-items: center;
@@ -205,10 +219,12 @@
       }
     }
   }
+
   &__accordion-text {
     @include fsl(18px, 140%);
     transition: $transition;
   }
+
   &__accordion-icon {
     margin-left: 4px;
 
@@ -216,8 +232,10 @@
     align-items: center;
     justify-content: center;
   }
+
   &__accordion-svg {
     transition: $transition;
+
     path {
       transition: $transition;
     }
@@ -227,18 +245,22 @@
     display: flex;
     align-items: center;
   }
+
   &__nav-item {
 
     &:not(:first-child) {
       margin-left: 32px;
+
       @media (max-width: ($breakpoint-ll - 1px)) {
         margin-left: 20px;
       }
+
       @media (max-width: ($breakpoint-l - 1px)) {
         margin-left: 15px;
       }
     }
   }
+
   &__nav-link {
     @include fsl(14px, 140%);
     transition: $transition;
@@ -247,6 +269,7 @@
       color: $color-blue;
     }
   }
+
   &__nav-button {
     display: flex;
     align-items: center;
@@ -257,6 +280,7 @@
       #{$comp}__nav-text {
         color: $color-blue;
       }
+
       #{$comp}__nav-svg {
         path {
           stroke: $color-blue;
@@ -268,18 +292,22 @@
       #{$comp}__nav-text {
         color: $color-blue;
       }
+
       #{$comp}__nav-svg {
         transform: rotate(180deg);
+
         path {
           stroke: $color-blue;
         }
       }
     }
   }
+
   &__nav-text {
     @include fsl(14px, 140%);
     transition: $transition;
   }
+
   &__nav-icon {
     margin-left: 4px;
 
@@ -287,8 +315,10 @@
     align-items: center;
     justify-content: center;
   }
+
   &__nav-svg {
     transition: transform $transition;
+
     path {
       transition: $transition;
     }
@@ -302,17 +332,21 @@
 
   &__search {
     padding-left: 32px;
+
     @media (max-width: ($breakpoint-xl - 1px)) {
       padding-left: 25px;
     }
 
     width: calc(#{$col-part-d} * 4 - #{$col-gap-d});
+
     @media (max-width: ($breakpoint-xl - 1px)) {
       width: calc(#{$col-part-d} * 3 - #{$col-gap-d});
     }
+
     @media (max-width: ($breakpoint-ll - 1px)) {
       width: calc(#{$col-part-d} * 4 - #{$col-gap-d});
     }
+
     height: 100%;
 
     display: flex;
@@ -323,19 +357,24 @@
     transition: $transition;
 
     &:focus-within {
-      border-color: $color-blue;
+      @media (min-width: $breakpoint) {
+        border-color: $color-blue;
 
-      #{$comp}__search-svg {
-        circle {
-          stroke: $color-blue;
-        }
+        #{$comp}__search-svg {
+          circle {
+            stroke: $color-blue;
+          }
 
-        line {
-          stroke: $color-blue;
+          line {
+            stroke: $color-blue;
+          }
         }
       }
     }
+
+
   }
+
   &__search-icon {
     margin-right: 15px;
     margin-top: 7px;
@@ -348,6 +387,7 @@
     background: none;
     border: none;
   }
+
   &__search-svg {
     @media (max-width: ($breakpoint - 1px)) {
       width: 24px;
@@ -357,16 +397,19 @@
     circle {
       transition: $transition;
     }
+
     line {
       transition: $transition;
     }
   }
+
   &__search-input {
     width: 100%;
 
     border: none;
     @include fsl(14px, 140%);
     @include f-main();
+
     @include placeholder {
       color: $color-gray;
     }
@@ -390,10 +433,12 @@
       }
     }
   }
+
   &__cart-icon {
     display: flex;
     align-items: center;
   }
+
   &__cart-svg {
     @media (max-width: ($breakpoint - 1px)) {
       width: 32px;
@@ -404,8 +449,10 @@
       transition: $transition;
     }
   }
+
   &__cart-count {
     --size: 16px;
+
     @media (max-width: ($breakpoint - 1px)) {
       --size: 13px;
     }
@@ -427,6 +474,7 @@
     border-radius: 50%;
     color: $color-white;
     @include fsl(12px, 140%);
+
     @media (max-width: ($breakpoint - 1px)) {
       @include fsl(10px, 110%);
     }
@@ -442,6 +490,7 @@
         circle {
           stroke: $color-blue;
         }
+
         path {
           stroke: $color-blue;
         }
@@ -453,6 +502,7 @@
         circle {
           stroke: $color-blue;
         }
+
         path {
           stroke: $color-blue;
         }
@@ -464,6 +514,7 @@
       }
     }
   }
+
   &__user-icon {
     display: flex;
     align-items: center;
@@ -471,6 +522,7 @@
 
     cursor: pointer;
   }
+
   &__user-links {
     position: absolute;
     right: 0;
@@ -481,38 +533,46 @@
     pointer-events: none;
     transition: $transition;
   }
+
   &__user-container {
     width: 210px;
 
     background: $color-white;
     border-radius: 4px;
   }
+
   &__user-top {
     padding: 12px 20px;
 
     border-bottom: 1px solid $color-light-gray;
   }
+
   &__user-name {
     font-weight: 500;
     line-height: 120%;
   }
+
   &__user-list {
     padding: 12px 20px;
   }
+
   &__user-item {
 
     &:not(:first-child) {
       margin-top: 4px;
     }
   }
+
   &__user-link {
     @include fsl(14px, 140%);
     transition: $transition;
   }
+
   &__user-svg {
     circle {
       transition: $transition
     }
+
     path {
       transition: $transition;
     }
@@ -520,28 +580,46 @@
 
   &__mobile {
     display: none;
+
     @media (max-width: ($breakpoint - 1px)) {
       display: block;
     }
   }
+
   &__mobile-row {
     display: flex;
     align-items: center;
   }
+
   &__mobile-col {
 
     &:not(:first-child) {
       margin-left: 20px;
     }
   }
+
   &__mobile-search {
     display: flex;
     align-items: center;
     justify-content: center;
 
     cursor: pointer;
+
+    &.active {
+      color: red;
+
+      #{$comp}__search-svg {
+        circle {
+          stroke: $color-blue;
+        }
+
+        line {
+          stroke: $color-blue;
+        }
+      }
+    }
   }
-  
+
   &__menu {
     --size: 30px;
 
@@ -567,6 +645,7 @@
     width: 16px;
     height: 13px;
   }
+
   &__burger-span {
 
     &:nth-child(1),
@@ -574,10 +653,10 @@
       content: '';
       position: absolute;
       left: 0;
-      
+
       width: 16px;
       height: 1px;
-      
+
       contain: content;
       background: $color-white;
       transition: .3s;
@@ -587,6 +666,7 @@
     &:nth-child(1) {
       top: 0;
     }
+
     &:nth-child(3) {
       bottom: 0;
     }
@@ -615,6 +695,7 @@
       }
     }
   }
+
   &__modal-overlay {
     position: absolute;
     left: 0;
@@ -628,30 +709,37 @@
     visibility: hidden;
     transition: $transition;
   }
+
   &__modal-product {
     display: none;
   }
+
   &__modal-container {
     padding: 24px calc(#{$col-pad-d}) 38px calc(#{$col-part-d} + #{$col-pad-d});
+
     @media (max-height: 800px) {
       overflow-y: scroll;
       @include scrollbar-hidden;
       max-height: 550px;
     }
   }
+
   &__modal-row {
     display: flex;
   }
+
   &__modal-col {
     &:nth-child(1) {
       padding-right: 50px;
 
       flex-shrink: 0;
       width: calc(#{$col-part-d} * 3);
+
       @media (max-width: ($breakpoint-ll - 1px)) {
         width: calc(#{$col-part-d} * 4);
       }
     }
+
     &:nth-child(2) {
       @media (min-width: $breakpoint) {
         margin-top: 16px;
@@ -659,6 +747,7 @@
       }
     }
   }
+
   &__modal-list {
     padding: 20px;
 
@@ -669,6 +758,7 @@
       background: transparent;
     }
   }
+
   &__modal-item {
     font-weight: 500;
     cursor: pointer;
@@ -694,12 +784,15 @@
       display: block;
     }
   }
+
   &__listing-item {
     display: flex;
+
     &:not(:first-child) {
       margin-top: 20px;
     }
   }
+
   &__listing-link {
     transition: $transition;
     @include fsl(14px, 120%);
