--- a/src/assets/styles/modules/accordion.scss
+++ b/src/assets/styles/modules/accordion.scss
@@ -12,7 +12,9 @@
   transition: $transition;
 
   &:hover {
-    border-color: $color-blue;
+    @media (min-width: $breakpoint) {
+      border-color: $color-blue;
+    }
   }
 
   &.active {
