--- a/src/views/components/header.pug
+++ b/src/views/components/header.pug
@@ -60,7 +60,7 @@ mixin header
                   +cart-svg.header__cart-svg
                 .header__cart-count 
                   |5
-              .header__user(data-fancy-button='1')
+              .header__user.loged(data-fancy-button='1')
                 .header__user-icon
                   +user-svg.header__user-svg
                 .header__user-links 
@@ -98,7 +98,7 @@ mixin header
           .mobile-menu__container
             .mobile-menu__top 
               .mobile-menu__col 
-                a.mobile-menu__button(href="#" data-fancy-button='1')  
+                a.mobile-menu__button(href="#" data-fancy-button='p1')  
                   .mobile-menu__icon 
                     +user-svg.mobile-menu__svg
                   .mobile-menu__text
