--- a/src/views/pages/booking-2.pug
+++ b/src/views/pages/booking-2.pug
@@ -5,6 +5,9 @@ include ../components/button
 include ../components/counter
 include ../components/model-tabs
 
+block vars 
+  - var isVisible = true
+
 block content 
   .booking-page.cart-page 
     section.section.section--first.section--last 
