--- a/src/assets/styles/modules/form.scss
+++ b/src/assets/styles/modules/form.scss
@@ -3,7 +3,7 @@
 
   &--disabled {
 
-    .profile-page__form-grid {
+    #{$comp}__input {
       opacity: 0.4;
       pointer-events: none;
     }
@@ -32,6 +32,10 @@
           margin-top: 16px;
         }
       }
+    }
+
+    &--default {
+      margin: 0;
     }
   }
 
