--- a/src/assets/styles/modules/modals.scss
+++ b/src/assets/styles/modules/modals.scss
@@ -192,6 +192,44 @@
   }
 }
 
+.profile-modal {
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  display: none;
+  width: 190px;
+  height: 100%;
+
+  background: $color-white;
+  transition: transform $transition;
+
+  &__container {
+    padding: 48px 0;
+  }
+
+  &__top {
+    padding: 0 20px 12px;
+
+    border-bottom: 1px solid $color-light-gray;
+  }
+
+  &__body {
+    padding: 12px 20px 0;
+  }
+
+  &__item {
+
+    &:not(:first-child) {
+      margin-top: 8px;
+    }
+  }
+
+  &__link {
+    @include fsl(14px, 140%);
+  }
+}
+
 .fancybox-slide--html .fancybox-close-small {
   --size: 30px;
 
