--- a/src/views/pages/cart.pug
+++ b/src/views/pages/cart.pug
@@ -4,6 +4,9 @@ include ../components/navigation
 include ../components/button
 include ../components/counter
 
+block vars 
+  - var isVisible = true
+
 block content 
   .cart-page 
     section.section.section--first 
