--- a/src/views/pages/clients.pug
+++ b/src/views/pages/clients.pug
@@ -4,39 +4,35 @@ include ../components/navigation
 include ../components/tabs
 
 block content 
-  -
-    var ddata = [
-      {
-        title: 'Наличный расчет',
-        text: 'Оплата наличными производится курьеру при получении товара посредством доставки собственной службой по Москве и Московской области, либо при самовывозе в магазинах Аквасинк.'
-      },
-      {
-        title: 'Безналичный расчет',
-        text: 'Оплата наличными производится курьеру при получении товара посредством доставки собственной службой по Москве и Московской области, либо при самовывозе в магазинах Аквасинк.'
-      },
-      {
-        title: 'Отмена заказа',
-        text: 'При удалении товаров из оплаченного заказа или при аннулировании заказа целиком Вы можете заказать другой товар на такую же сумму, либо полностью вернуть всю сумму с помощью Вашего менеджера.'
-      },
-      {
-        title: 'Доставка и выдача заказа',
-        text: 'Доставка или выдача при самовывозе товара, оплаченного пластиковой картой, осуществляется со дня зачисления денег на наш счет. Частные покупатели для получения товара должны предъявить паспорт владельца пластиковой карты, по которой производилась оплата заказа. Представитель юридического лица должен иметь доверенность с печатью от компании-плательщика или саму печать.'
-      },
-    ]
   .clients-page
     section.section.section--first 
       .container 
         +navigation(page='Клиентам')
     section.section.section--last
       .container 
-        .row 
+        .row(data-tabs-parent='')
           .row__col
-            +tabs.tabs--column(tabs = ['Оплата', 'Доставка', 'Возврат'])
+            +tabs.tabs--column(tabs = ['Оплата', 'Доставка', 'Возврат'] real = true)
           .row__col
-            ul.clients-page__list 
-              each item in ddata
+            .tabs-block.active(data-tabs-block='')
+              ul.clients-page__list 
                 li.clients-page__item
                   h3.clients-page__title 
-                    |#{item.title}
+                    |Наличный расчет
                   p.clients-page__text
-                    |#{item.text}
+                    |Оплата наличными производится курьеру при получении товара посредством доставки собственной службой по Москве и Московской области, либо при самовывозе в магазинах Аквасинк.
+                li.clients-page__item
+                  h3.clients-page__title 
+                    |Безналичный расчет
+                  p.clients-page__text
+                    |Оплата наличными производится курьеру при получении товара посредством доставки собственной службой по Москве и Московской области, либо при самовывозе в магазинах Аквасинк.
+            .tabs-block(data-tabs-block='')
+              h3.clients-page__title 
+                |Доставка и выдача заказа
+              p.clients-page__text
+                |Доставка или выдача при самовывозе товара, оплаченного пластиковой картой, осуществляется со дня зачисления денег на наш счет. Частные покупатели для получения товара должны предъявить паспорт владельца пластиковой карты, по которой производилась оплата заказа. Представитель юридического лица должен иметь доверенность с печатью от компании-плательщика или саму печать.
+            .tabs-block(data-tabs-block='')
+              h3.clients-page__title 
+                |Отмена заказа
+              p.clients-page__text
+                |При удалении товаров из оплаченного заказа или при аннулировании заказа целиком Вы можете заказать другой товар на такую же сумму, либо полностью вернуть всю сумму с помощью Вашего менеджера.
