--- a/src/views/pages/contacts.pug
+++ b/src/views/pages/contacts.pug
@@ -18,7 +18,7 @@ block content
             |Контакты
           a.contacts-page__button(href="#") 
             .contacts-page__button-icon
-              +printer-svg
+              +printer-svg.contacts-page__button-svg
             .contacts-page__button-text 
               |Распечтать контакты
     section.section 
@@ -115,7 +115,7 @@ block content
                 img.mobile(src="assets/images/contacts-1-mobile.jpg", alt="")
           .contacts-page__grid-item
             h3.contacts-page__title
-              |Москва
+              |Нижний Новгород
             .contacts-page__grid-row 
               .contacts-page__grid-col
                 .contacts-page__label 
