--- a/src/assets/styles/pages/publications-page.scss
+++ b/src/assets/styles/pages/publications-page.scss
@@ -1,4 +1,5 @@
 .publications-page {
+  $comp: &;
 
   &__grid {
     --colCount: 2;
@@ -128,6 +129,22 @@
 
     border: 1px solid $color-light-gray;
     border-radius: 4px;
+    transition: $transition;
+
+    &:hover {
+      border-color: $color-blue;
+      background: $color-blue;
+
+      #{$comp}__button-svg {
+        path {
+          stroke: $color-white;
+        }
+      }
+
+      #{$comp}__button-text {
+        color: $color-white;
+      }
+    }
   }
   &__button-icon {
     display: flex;
@@ -139,12 +156,14 @@
     transform: rotate(-135deg);
     path {
       stroke: $color-black;
+      transition: stroke $transition;
     }
   }
   &__button-text {
     margin-left: 7px;
 
     @include fsl(14px, 140%);
+    transition: color $transition;
   }
 
   &__container {
