--- a/src/assets/styles/modules/header.scss
+++ b/src/assets/styles/modules/header.scss
@@ -10,6 +10,10 @@
   // background: $color-white;
   transition: $transition;
 
+  @media print {
+    background: red;
+  }
+
   &--up {
     @media (min-width: $breakpoint) {
       transform: translateY(-80px);
