Update meta and contacts page

--- a/src/assets/styles/modules/breadcrumbs.scss
+++ b/src/assets/styles/modules/breadcrumbs.scss
@@ -16,6 +16,10 @@
     @include scrollbar-hidden;
   }
 
+  @media print {
+    display: none;
+  }
+
   &__list {
     display: flex;
     flex-shrink: 0;
