--- a/src/assets/styles/modules/section.scss
+++ b/src/assets/styles/modules/section.scss
@@ -9,6 +9,10 @@
     @media (max-width: ($breakpoint - 1px)) {
       margin-top: 63px;
     }
+
+    @media print {
+      margin-top: 40px;
+    }
   }
 
   &--md {
