--- a/src/views/pages/booking.pug
+++ b/src/views/pages/booking.pug
@@ -90,7 +90,7 @@ block content
                                 +location-svg
                             .booking-page__item-col
                               .booking-page__item-text 
-                                |Старожиловская улица, 9
+                                |Санкт-Петербург Старожиловская улица, 9
                         .booking-page__block-col
                           .booking-page__item 
                             .booking-page__item-col
