--- a/src/assets/styles/modules/header.scss
+++ b/src/assets/styles/modules/header.scss
@@ -9,8 +9,9 @@
 
   // background: $color-white;
   transition: $transition;
-
-
+  @media print {
+    display: none;
+  }
 
   &--up {
     @media (min-width: $breakpoint) {
@@ -78,9 +79,6 @@
 
     background: $color-white;
     border-bottom: 1px solid $color-light-gray;
-    @media print {
-      background: red;
-    }
   }
 
   &__logo {
