--- a/src/assets/styles/pages/contacts-page.scss
+++ b/src/assets/styles/pages/contacts-page.scss
@@ -10,6 +10,10 @@
 
     align-items: center;
     justify-content: space-between;
+
+    @media print {
+      display: none;
+    }
   }
 
   &__button {
@@ -19,10 +23,6 @@
 
     display: flex;
     align-items: center;
-
-    @media print {
-      display: none;
-    }
 
     cursor: pointer;
 
@@ -122,6 +122,10 @@
     }
 
     justify-content: space-between;
+
+    @media print {
+      display: flex;
+    }
   }
 
   &__section-col {
@@ -132,6 +136,10 @@
     @media (max-width: ($breakpoint - 1px)) {
       width: 100%;
       display: block;
+    }
+
+    @media print {
+      width: 50%;
     }
 
     &:nth-child(1) {
@@ -193,6 +201,10 @@
     @media (max-width: ($breakpoint - 1px)) {
       border-radius: 2px;
     }
+
+    @media print {
+      display: none;
+    }
   }
 
   &__grid {
@@ -218,6 +230,9 @@
     }
 
     justify-content: space-between;
+    @media print {
+      display: flex;
+    }
   }
 
   &__grid-col {
@@ -226,6 +241,9 @@
 
     @media (max-width: ($breakpoint - 1px)) {
       width: 100%;
+    }
+    @media print {
+      width: 50%;
     }
 
     &:nth-child(2) {
