--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -17,6 +17,14 @@ html(lang='en')
     meta(name="viewport", content="width=device-width, initial-scale=1, user-scalable=no")
     meta(name="format-detection", content="telephone=no")
     meta(name="format-detection", content="address=no")
+    //- favicon
+    link(rel="icon", type='image/png' href="assets/images/favicon-16x16.png" sizes='16x16')
+    link(rel="icon", type='image/png' href="assets/images/favicon-32x32.png" sizes='32x32')
+    link(rel="shortcut icon", href="assets/images/favicon.ico")
+    //- IOS
+    link(rel="apple-touch-icon", href="assets/images/svg/appletouch-icon.svg")
+    //- opengraph
+    meta(property='og:image' content='assets/images/opengraph.jpg')
 
   block vars
 
