Update safari print version

--- a/src/assets/styles/modules/container.scss
+++ b/src/assets/styles/modules/container.scss
@@ -3,4 +3,8 @@
   @media (max-width: ($breakpoint - 1px)) {
     padding: 0 #{$col-pad-m};
   }
+
+  @media print {
+    padding: 0 #{$col-pad-m};
+  }
 }
