--- a/src/assets/styles/base/base.scss
+++ b/src/assets/styles/base/base.scss
@@ -56,6 +56,10 @@ h3 {
   @media (max-width: ($breakpoint - 1px)) {
     @include fsl(16px, 120%);
   }
+
+  @media print {
+    @include fsl(16px, 120%);
+  }
 }
 
 h4 {
