--- a/src/assets/styles/modules/section.scss
+++ b/src/assets/styles/modules/section.scss
@@ -4,6 +4,10 @@
     margin-top: 40px;
   }
 
+  @media print {
+    margin-top: 40px;
+  }
+
   &--first {
     margin-top: 175px;
     @media (max-width: ($breakpoint - 1px)) {
@@ -25,6 +29,10 @@
   &--last {
     margin-bottom: 100px;
     @media (max-width: ($breakpoint - 1px)) {
+      margin-bottom: 60px;
+    }
+
+    @media print {
       margin-bottom: 60px;
     }
   }
